CHANGELOG

2014-04-06: Added "Request translation" menu item, re-arranged menus, updated icons.
2014-03-31: Fixed some sources.
2014-03-05: Miscellaneous minor edits.
2014-02-09: Add "heartbeat" meaning to {tIq:v} from {paq'batlh}.
2014-01-30: German entries for {D}, {'I}, {l}, {gh}, {p}, {q}
2014-01-27: New vocabulary: geometry terms, jungle gym.
2014-01-15: Minor edits.
2014-01-01: Add lines from deleted scene from Star Trek (2009) movie.
2013-12-23: Minor edits. German entries for {S}.
2013-12-14: Added notes on Christmas and New Year.
2013-12-05: Minor edits. Edit notes on {chuQun} and {qa'}. Fix bug with {nuq} and {'Iv} with suffixes.
2013-11-23: Edited some notes based on KGT. Update KAG forum URL.
2013-11-11: New vocabulary from qepHom'a' 2013, including new words from Star Trek Into Darkness and Klingon weekday names.

2013-10-21: Added "float" mode. This requires permission to "draw over other apps".
2013-10-20: Add README file. Add dependency on StandOut library.
2013-10-15: German entries for {'a}, {'e}, {'I}, {'o}, and {y}. Miscellaneous edits.

2013-09-23: German entries for {Q} and {m}.
2013-09-12: Added some song lyrics.

2013-09-06: Edits to notes and examples. Fix bug with display of the city name Saarbrücken.
2013-08-25: Added prefix charts. Revert Android support library to v4. Minor edits.

2013-08-21: Updated to latest Android support library.
2013-08-14: Added some common phrases. Minor edits.
2013-08-12: Add new word {jentu'}, clarify words {'aplo'} and {qoSta'}.

2013-08-06: Add links from menu to YouTube playlists. Upgrade to: android-18, ActionBarSherlock v4.4.0, android-menudrawer v3.0.4.

2013-08-05: Minor edits.
2013-07-30: Link to "Learn Klingon" Facebook group and KAG and KIDC message boards.
2013-07-24: UI revamp - {qep'a'} edition for tablets

2013-07-09, 2013-07-19: Minor edits and fixes to some entries.
2013-06-29: Minor edits. Added Saturn.

2013-06-08, 2013-06-13: Added new word for "scroll", edited various entries.
