@@ -98,6 +98,7 @@
         </menu>
     </item>
 
+    <!--
     <item android:id="@+id/social"
         android:title="@string/menu_social_tlh">
         <menu>
@@ -111,4 +112,5 @@
                 android:title="@string/menu_kidc_tlh" />
         </menu>
     </item>
+    -->
 </menu>
