@@ -1,5 +1,6 @@
 CHANGELOG
 
+2014-04-08: Added a tutorial.
 2014-04-06: Added "Request translation" menu item, re-arranged menus, updated icons.
 2014-03-31: Fixed some sources.
 2014-03-05: Miscellaneous minor edits.
